--- a/src/pages/news/css/commonn.less
+++ b/src/pages/news/css/commonn.less
@@ -2,7 +2,7 @@
   position: relative;
   width: 100%;
   height: 35px;
-  background-color: red;
+  //background-color: red;
 
 }
 
@@ -20,8 +20,7 @@
 
 .contentGe {
   width: 100%;
-
-  border: 1px solid red;
+  border-left: 2px solid red;
 }
 
 .contentGe li {
